--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,24 +4,12 @@
 @custom-variant dark (&:is(.dark *));
 @font-face {
   font-family: "satoshi";
-  src: url("./fonts/satoshi/Satoshi-Variable.ttf") format("truetype");
+  src: url("/fonts/satoshi/Satoshi-Variable.ttf") format("truetype");
   font-weight: 100 900;
   font-style: normal;
 }
 /* Root Variables for Colors and Fonts */
 :root {
-  /* Colors - System Colors */
-  --primary: oklch(0.205 0 0);
-  --secondary: oklch(0.97 0 0);
-  --text: #2c2c2c;
-  --accent: oklch(0.97 0 0);
-
-  /* Colors - Custom Colors */
-  --footerbg: #f8f8f8;
-  --footer-text: #708099;
-  --white: #ffffff;
-  --footer-dark: #dbdbdb;
-
   /* Font Families */
   --font-primary: "satoshi", sans-serif;
 
@@ -194,7 +182,6 @@ span {
 }
 /*responsive width for main content*/
 main {
-  max-width: 1280px;
   overflow: hidden;
   align-self: center;
 }
